--- a/spot-client/src/css/views.css
+++ b/spot-client/src/css/views.css
@@ -62,7 +62,7 @@
     background-size: cover;
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    min-height: 100%;
     justify-content: center;
     width: 100vw;
 }
